--- a/Modacity/Modacity/ViewController/Notes/NotesListView.xib
+++ b/Modacity/Modacity/ViewController/Notes/NotesListView.xib
@@ -17,6 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NotesListView" customModule="Modacity" customModuleProvider="target">
             <connections>
+                <outlet property="constraintForTopUnlockPanelBottomSpace" destination="UGI-hq-zhq" id="dr0-lR-q3F"/>
                 <outlet property="labelUnlockDescription" destination="8kI-qA-fQ8" id="4AC-6s-sSq"/>
                 <outlet property="labelUnlockTitle" destination="kh0-D5-bF1" id="ITO-Dd-Xpm"/>
                 <outlet property="tableViewMain" destination="kHd-FO-nNM" id="Bso-kV-jm3"/>
