--- a/Modacity/Modacity/ViewController/Premium/PremiumUpgradeSlideComingSoonView.xib
+++ b/Modacity/Modacity/ViewController/Premium/PremiumUpgradeSlideComingSoonView.xib
@@ -20,6 +20,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PremiumUpgradeSlideComingSoonView" customModule="Modacity" customModuleProvider="target">
             <connections>
+                <outlet property="constraintForBottomViewBottomSpace" destination="AtX-yr-4Qa" id="lKz-fv-1LU"/>
+                <outlet property="constraintForViewHeight1" destination="5lM-4V-X0u" id="Qtb-i6-qpL"/>
+                <outlet property="constraintForViewHeight2" destination="oGd-FF-fll" id="MnW-xw-sEr"/>
+                <outlet property="constraintForViewHeight3" destination="C6f-ws-FxG" id="ZEA-6d-OOt"/>
+                <outlet property="constraintForViewHeight4" destination="WRr-Mo-GFt" id="lCT-TN-7lu"/>
                 <outlet property="labelTitleTopView" destination="ceX-ry-g6Q" id="C7p-9W-FR3"/>
                 <outlet property="viewContent" destination="mXc-6y-zp0" id="yO9-UA-euQ"/>
             </connections>
