--- a/Modacity/Modacity/ViewController/Premium/PremiumUpgradeSlideView.xib
+++ b/Modacity/Modacity/ViewController/Premium/PremiumUpgradeSlideView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -32,14 +32,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="mXc-6y-zp0">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09a-Fp-4bC">
-                    <rect key="frame" x="40" y="587" width="295" height="60"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="60" id="ITR-WT-ELN"/>
-                    </constraints>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09a-Fp-4bC">
+                    <rect key="frame" x="40" y="407.5" width="240" height="67.5"/>
                     <string key="text">Premium musicians can track everything they’ve 
 done in the app, from improvements to
 time spent, it’s all available to you.</string>
@@ -48,16 +45,16 @@ time spent, it’s all available to you.</string>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Mz-Z4-5av">
-                    <rect key="frame" x="72" y="536" width="231" height="41"/>
+                    <rect key="frame" x="44.5" y="367.5" width="231" height="30"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUR" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h79-gz-mmw">
-                            <rect key="frame" x="0.0" y="8" width="57.5" height="25.5"/>
+                            <rect key="frame" x="0.0" y="2.5" width="57.5" height="25.5"/>
                             <fontDescription key="fontDescription" name="Lato-Light" family="Lato" pointSize="21"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRACTICE STATS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5g-8N-KYb">
-                            <rect key="frame" x="62.5" y="8" width="168.5" height="25.5"/>
+                            <rect key="frame" x="62.5" y="2.5" width="168.5" height="25.5"/>
                             <fontDescription key="fontDescription" name="Lato-Black" family="Lato" pointSize="21"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -67,29 +64,31 @@ time spent, it’s all available to you.</string>
                     <constraints>
                         <constraint firstItem="h79-gz-mmw" firstAttribute="leading" secondItem="2Mz-Z4-5av" secondAttribute="leading" id="DwI-7x-e7C"/>
                         <constraint firstAttribute="trailing" secondItem="d5g-8N-KYb" secondAttribute="trailing" id="Met-SL-ziU"/>
-                        <constraint firstAttribute="height" constant="41" id="Ucn-N6-k1B"/>
+                        <constraint firstAttribute="height" constant="30" id="Ucn-N6-k1B"/>
                         <constraint firstItem="d5g-8N-KYb" firstAttribute="centerY" secondItem="2Mz-Z4-5av" secondAttribute="centerY" id="fC7-L7-y6J"/>
                         <constraint firstItem="h79-gz-mmw" firstAttribute="centerY" secondItem="2Mz-Z4-5av" secondAttribute="centerY" id="v9a-4X-zUQ"/>
                         <constraint firstItem="d5g-8N-KYb" firstAttribute="leading" secondItem="h79-gz-mmw" secondAttribute="trailing" constant="5" id="yfe-Ku-fFd"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qaJ-eb-4hM">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="526"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="357.5"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="premium_slider_chart" translatesAutoresizingMaskIntoConstraints="NO" id="GmG-OY-4ht">
-                            <rect key="frame" x="55" y="175" width="264" height="176"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" image="premium_slider_chart" translatesAutoresizingMaskIntoConstraints="NO" id="GmG-OY-4ht">
+                            <rect key="frame" x="20" y="20" width="280" height="317.5"/>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="GmG-OY-4ht" firstAttribute="centerX" secondItem="qaJ-eb-4hM" secondAttribute="centerX" id="N9o-JW-duN"/>
-                        <constraint firstItem="GmG-OY-4ht" firstAttribute="centerY" secondItem="qaJ-eb-4hM" secondAttribute="centerY" id="fzH-Bb-TAT"/>
+                        <constraint firstItem="GmG-OY-4ht" firstAttribute="leading" secondItem="qaJ-eb-4hM" secondAttribute="leading" constant="20" id="1Yn-S5-tBw"/>
+                        <constraint firstItem="GmG-OY-4ht" firstAttribute="top" secondItem="qaJ-eb-4hM" secondAttribute="top" constant="20" id="37M-44-oG2"/>
+                        <constraint firstAttribute="trailing" secondItem="GmG-OY-4ht" secondAttribute="trailing" constant="20" id="3vj-q6-pQw"/>
+                        <constraint firstAttribute="bottom" secondItem="GmG-OY-4ht" secondAttribute="bottom" constant="20" id="gzN-0m-7sm"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="9Df-qb-l5P" firstAttribute="bottom" secondItem="09a-Fp-4bC" secondAttribute="bottom" constant="20" id="1aX-fO-ame"/>
+                <constraint firstItem="9Df-qb-l5P" firstAttribute="bottom" secondItem="09a-Fp-4bC" secondAttribute="bottom" constant="5" id="1aX-fO-ame"/>
                 <constraint firstItem="qaJ-eb-4hM" firstAttribute="trailing" secondItem="9Df-qb-l5P" secondAttribute="trailing" id="1ns-Uc-Q0f"/>
                 <constraint firstItem="09a-Fp-4bC" firstAttribute="leading" secondItem="9Df-qb-l5P" secondAttribute="leading" constant="40" id="8MO-xc-KWj"/>
                 <constraint firstItem="2Mz-Z4-5av" firstAttribute="top" secondItem="qaJ-eb-4hM" secondAttribute="bottom" constant="10" id="G5g-hi-bqb"/>
