--- a/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
+++ b/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
@@ -509,6 +509,7 @@
                         <outlet property="buttonAudioBackward" destination="xAo-yA-VmF" id="meC-8g-Svl"/>
                         <outlet property="buttonAudioForward" destination="o4y-t0-Wkn" id="KvJ-nT-O8R"/>
                         <outlet property="buttonAudioPlay" destination="c98-Ae-dDF" id="U49-Zj-t1W"/>
+                        <outlet property="buttonDone" destination="f6j-O8-RAm" id="OiI-bE-F0U"/>
                         <outlet property="buttonFavorite" destination="CqK-vm-U6A" id="LxK-kB-F3y"/>
                         <outlet property="buttonSaveRecord" destination="Ovm-8S-GaC" id="OFD-yd-XKr"/>
                         <outlet property="buttonTimerUpDownArrow" destination="iGP-Iw-poe" id="Jus-ve-2AA"/>
