--- a/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
+++ b/Modacity/Modacity/ViewController/PlayPractice/practice.storyboard
@@ -1222,6 +1222,7 @@ note</string>
                         <outlet property="buttonAudioBackward" destination="tvH-c9-pIH" id="1wj-lb-lF0"/>
                         <outlet property="buttonAudioForward" destination="0Ij-Bu-0sv" id="8bT-4S-275"/>
                         <outlet property="buttonAudioPlay" destination="61t-fl-RgG" id="TAq-KW-mlp"/>
+                        <outlet property="buttonDone" destination="umQ-0h-3Ts" id="jEX-uo-BKc"/>
                         <outlet property="buttonFavorite" destination="3ih-li-oGR" id="2c6-gc-b5a"/>
                         <outlet property="buttonSaveRecord" destination="Shp-Kw-h4Y" id="hfO-CY-Z4K"/>
                         <outlet property="buttonTimerUpDownArrow" destination="Aa7-K8-Bf5" id="iIG-01-EiE"/>
