--- a/Modacity/Modacity/ViewController/Notes/PracticeNoteCell.xib
+++ b/Modacity/Modacity/ViewController/Notes/PracticeNoteCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -27,12 +27,15 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D4N-9t-pTa">
                         <rect key="frame" x="5" y="5" width="364" height="82"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mistakes are immensely useful. They show us where we are right now and what we need to do next." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="CVU-f6-iKa">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dj5-yW-ulj">
                         <rect key="frame" x="25" y="15" width="324" height="41"/>
-                        <fontDescription key="fontDescription" name="Lato-Italic" family="Lato" pointSize="14"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
                         <color key="textColor" red="0.58823529411764708" green="0.59215686274509804" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                        <fontDescription key="fontDescription" name="Lato-Italic" family="Lato" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES" shipmentTrackingNumber="YES" flightNumber="YES" lookupSuggestion="YES"/>
+                    </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9 / 24 / 18" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c7a-jA-ast">
                         <rect key="frame" x="25" y="61" width="44.5" height="16"/>
                         <constraints>
@@ -45,23 +48,23 @@
                 </subviews>
             </view>
             <constraints>
+                <constraint firstItem="Dj5-yW-ulj" firstAttribute="trailing" secondItem="D4N-9t-pTa" secondAttribute="trailing" constant="-20" id="Crd-yE-E9S"/>
                 <constraint firstItem="c7a-jA-ast" firstAttribute="bottom" secondItem="D4N-9t-pTa" secondAttribute="bottom" constant="-10" id="Dig-6c-1w1"/>
-                <constraint firstItem="c7a-jA-ast" firstAttribute="leading" secondItem="CVU-f6-iKa" secondAttribute="leading" id="Hxp-af-dXd"/>
                 <constraint firstAttribute="trailing" secondItem="D4N-9t-pTa" secondAttribute="trailing" constant="5" id="INM-JN-fsJ"/>
-                <constraint firstItem="CVU-f6-iKa" firstAttribute="top" secondItem="D4N-9t-pTa" secondAttribute="top" constant="10" id="YVr-GW-oLG"/>
-                <constraint firstItem="c7a-jA-ast" firstAttribute="top" secondItem="CVU-f6-iKa" secondAttribute="bottom" constant="5" id="aIF-co-Osl"/>
+                <constraint firstItem="Dj5-yW-ulj" firstAttribute="leading" secondItem="D4N-9t-pTa" secondAttribute="leading" constant="20" id="JKx-K8-pJq"/>
+                <constraint firstItem="Dj5-yW-ulj" firstAttribute="top" secondItem="D4N-9t-pTa" secondAttribute="top" constant="10" id="MML-P1-PDm"/>
+                <constraint firstItem="c7a-jA-ast" firstAttribute="top" secondItem="Dj5-yW-ulj" secondAttribute="bottom" constant="5" id="iPr-yH-ybP"/>
+                <constraint firstItem="c7a-jA-ast" firstAttribute="leading" secondItem="Dj5-yW-ulj" secondAttribute="leading" id="icQ-UJ-wMp"/>
                 <constraint firstItem="D4N-9t-pTa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="mRV-fo-DNj"/>
                 <constraint firstAttribute="bottom" secondItem="D4N-9t-pTa" secondAttribute="bottom" constant="5" id="mSU-vn-cy3"/>
-                <constraint firstItem="CVU-f6-iKa" firstAttribute="trailing" secondItem="D4N-9t-pTa" secondAttribute="trailing" constant="-20" id="ok3-ey-e4Q"/>
-                <constraint firstItem="CVU-f6-iKa" firstAttribute="leading" secondItem="D4N-9t-pTa" secondAttribute="leading" constant="20" id="qq7-HB-8XM"/>
                 <constraint firstItem="D4N-9t-pTa" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="vkR-es-brO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="374" height="92"/>
             <connections>
                 <outlet property="imageViewBackground" destination="D4N-9t-pTa" id="3P9-DM-tpl"/>
-                <outlet property="labelNote" destination="CVU-f6-iKa" id="NXj-aK-yyU"/>
                 <outlet property="labelTime" destination="c7a-jA-ast" id="FRY-Pn-ixt"/>
+                <outlet property="textViewNote" destination="Dj5-yW-ulj" id="lqR-fX-UXv"/>
             </connections>
             <point key="canvasLocation" x="187" y="73"/>
         </collectionViewCell>
