Ver 2.1(1) : sort,   merge (practice list and select)

--- a/Modacity/Modacity/ViewController/Notes/NoteCell.xib
+++ b/Modacity/Modacity/ViewController/Notes/NoteCell.xib
@@ -99,7 +99,7 @@
                         </constraints>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         <connections>
                             <action selector="onDidEndOnExitOnField:" destination="T5N-ak-0yn" eventType="editingDidEnd" id="Bdj-Ej-Qz3"/>
                             <action selector="onDidEndOnExitOnField:" destination="T5N-ak-0yn" eventType="editingDidEndOnExit" id="QCA-iM-wJT"/>
