Ver 2.2(2) : Fixed in app purchase issue and added analytics.

--- a/Modacity/Modacity/ViewController/Details/HistoryListView.xib
+++ b/Modacity/Modacity/ViewController/Details/HistoryListView.xib
@@ -18,10 +18,12 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HistoryListView" customModule="Modacity" customModuleProvider="target">
             <connections>
                 <outlet property="buttonEdit" destination="ujP-pD-718" id="zX5-kd-u33"/>
+                <outlet property="constraintForHistoryViewTopActionsPanelHeight" destination="pci-c5-aHZ" id="Ox7-nJ-qyy"/>
                 <outlet property="labelNoPracticeData" destination="yND-j6-hMh" id="x7S-Lc-4XJ"/>
                 <outlet property="tableViewMain" destination="kHd-FO-nNM" id="Bso-kV-jm3"/>
                 <outlet property="viewContent" destination="mXc-6y-zp0" id="yO9-UA-euQ"/>
                 <outlet property="viewLoaderPanel" destination="ppM-JD-Lax" id="llT-2C-bgS"/>
+                <outlet property="viewTopActionsPanel" destination="Gpm-qz-sG2" id="jjH-nx-1m6"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
